--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,21 @@
   margin: 0;
 }
 
+:root {
+  --primary-brand: #4d5ae5;
+  --pressed-state: #404bbf;
+  --dark: #2e2f42;
+  --success: #31d0aa;
+  --text: #434455;
+  --subtle-text: #8e8f99;
+  --accent: #e7e9fc;
+  --light: #f4f4fd;
+  --white: #ffffff;
+}
+
 body {
   font-family: 'Roboto', 'Raleway', sans-serif;
-  background: #ffffff;
+  background: var(--white);
 }
 
 a,
@@ -21,10 +33,10 @@ button {
 
 /* Header */
 header {
-  background-color: #ffffff;
+  background-color: var(--white);
   display: flex;
   justify-content: space-between;
-  border-bottom: 1px solid #e7e9fc;
+  border-bottom: 1px solid var(--accent);
 }
 
 nav {
@@ -46,18 +58,10 @@ nav .logo {
   align-items: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #4d5ae5;
+  color: var(--primary-brand);
 }
-nav .logo span {
-  font-family: 'Raleway';
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 24px;
-  display: flex;
-  align-items: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #2e2f42;
+nav .logo-dark {
+  color: var(--dark);
 }
 
 nav .nav-item {
@@ -68,16 +72,16 @@ nav .nav-item {
   gap: 40px;
 }
 
-nav .nav-item a {
+.nav-list:active {
+  color: var(--pressed-state);
+}
+
+nav .nav-list {
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 0.02em;
-  color: #2e2f42;
-}
-
-nav .nav-item a:active {
-  color: #404bbf;
+  color: var(--dark);
 }
 
 .contacts-item {
@@ -89,41 +93,41 @@ nav .nav-item a:active {
   margin: 24px 156px 24px 0;
 }
 
-.contacts-item a {
+.contacts-list:active {
+  color: var(--pressed-state);
+}
+
+.contacts-list {
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 0.02em;
-  color: #434455;
-}
-
-.contacts-item a:active {
-  color: #404bbf;
+  color: var(--text);
 }
 
 /* Hero */
-#hero {
+.hero {
   padding: 188px 0 188px 0;
-  background: #2e2f42;
+  background: var(--dark);
 }
 
-#hero h1 {
+.hero h1 {
   font-weight: 700;
   font-size: 56px;
   line-height: 60px;
   text-align: center;
   letter-spacing: 0.02em;
-  color: #ffffff;
+  color: var(--white);
   padding-bottom: 48px;
   margin: 0;
 }
 
-#hero button {
+.hero button {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   padding: 16px 32px;
   gap: 10px;
-  background: #4d5ae5;
+  background: var(--primary-brand);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   font-family: 'Roboto';
@@ -133,24 +137,24 @@ nav .nav-item a:active {
   display: flex;
   align-items: center;
   letter-spacing: 0.04em;
-  color: #ffffff;
+  color: var(--white);
   margin: 0 auto;
   border: 0;
 }
 
-#hero button:hover {
-  background: #404bbf;
+.hero-button:hover {
+  background: var(--pressed-state);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
 
 /* About us */
 
-#about-us {
+.about-us {
   margin: 90px 0 120px 0;
 }
 
-#about-us h2 {
+.about-us h2 {
   opacity: 0;
   margin: 0;
 }
@@ -175,7 +179,7 @@ nav .nav-item a:active {
   font-size: 20px;
   line-height: 24px;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--dark);
   margin: 0 0 8px 0;
   padding: 0;
 }
@@ -184,13 +188,13 @@ nav .nav-item a:active {
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--text);
   margin: 0;
   padding: 0;
 }
 
 /* We doing */
-#we-doing img {
+.we-doing img {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -200,14 +204,14 @@ nav .nav-item a:active {
   margin-bottom: 120px;
 }
 
-h2 {
+.we-doing h2 {
   font-weight: 700;
   font-size: 36px;
   line-height: 40px;
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  color: #2e2f42;
+  color: var(--dark);
   margin-bottom: 72px;
 }
 
@@ -218,23 +222,34 @@ h2 {
 }
 
 /* Our Team */
-#our-team {
-  background: #f4f4fd;
+.our-team {
+  background: var(--light);
   padding-bottom: 120px;
   padding-top: 120px;
+}
+
+.our-team h2 {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 40px;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--dark);
+  margin-bottom: 72px;
 }
 
 .team-cards {
   display: flex;
   justify-content: center;
 }
-#our-team .card {
+.our-team .card {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 0 0 0 0;
-  background: #ffffff;
+  background: var(--white);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
@@ -254,7 +269,7 @@ h2 {
   line-height: 24px;
   text-align: center;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--dark);
 }
 
 .card p {
@@ -264,24 +279,24 @@ h2 {
   line-height: 24px;
   text-align: center;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--text);
 }
 
 /* Footer */
 footer {
   padding: 100px 0 100px 156px;
-  background: #2e2f42;
+  background: var(--dark);
 }
 
 footer p {
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 0.02em;
-  color: #e7e9fc;
+  color: var(--accent);
   width: 264px;
 }
 
-footer a {
+footer .logo {
   font-family: 'Raleway';
   font-weight: 800;
   font-size: 18px;
@@ -290,24 +305,16 @@ footer a {
   align-items: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #4d5ae5;
+  color: var(--primary-brand);
   margin-bottom: 16px;
 }
 
-footer .logo-white span {
-  font-family: 'Raleway';
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 21px;
-  display: flex;
-  align-items: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #f4f4fd;
+footer .logo-white {
+  color: var(--light);
 }
 
 /* Portfolio.html */
-#filters {
+.filters {
   margin-top: 96px;
   margin-bottom: 72px;
 }
@@ -326,8 +333,8 @@ footer .logo-white span {
   justify-content: center;
   align-items: center;
   padding: 12px 24px;
-  background: #f4f4fd;
-  border: 1px solid #e7e9fc;
+  background: var(--light);
+  border: 1px solid var(--accent);
   border-radius: 4px;
   /* Button Text */
   font-weight: 500;
@@ -337,18 +344,18 @@ footer .logo-white span {
   align-items: center;
   text-align: center;
   letter-spacing: 0.04em;
-  color: #4d5ae5;
+  color: var(--primary-brand);
 }
 
 .filters-item button:hover {
-  background: #404bbf;
+  background: var(--pressed-state);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
-  color: #ffffff;
+  color: var(--white);
 }
 
-#portfolio {
+.portfolio {
   padding-right: 200px;
   padding-left: 200px;
   padding-bottom: 96px;
@@ -362,8 +369,8 @@ footer .logo-white span {
 }
 
 .portfolio-list {
-  background: #ffffff;
-  border: 1px solid #e7e9fc;
+  background: var(--white);
+  border: 1px solid var(--accent);
   margin-bottom: 24px;
 }
 
@@ -372,7 +379,7 @@ footer .logo-white span {
   font-size: 20px;
   line-height: 24px;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--dark);
   margin-top: 32px;
   margin-left: 16px;
 }
@@ -381,7 +388,7 @@ footer .logo-white span {
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--text);
   margin-top: 8px;
   margin-bottom: 32px;
   margin-left: 16px;
